2004-02-29  Adam Fedor  <fedor@gnu.org>

	* Headers/AppKit/NSPageLayout.h: Update tags.
	* Images/GNUmakefile: Add page_landscape.tiff, page_portrait.tiff.
	* Panels/English.lproj/GSPageLayout.gorm: Update.
	* Source/NSPageLayout.m: Internationalize gui text. Update for
	gorm changes. (Patches from Fabien Vallon).

2004-02-28  Adam Fedor  <fedor@gnu.org>

	* Version 0.9.2
	* Documentation/news.texi: Update.

2004-02-28  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSToolbarItem.m: Corrected misspelling of Separator.
	* Images/common_ToolbarSeparatorItem.tiff: added, misspelled 
	image file deleted
	* Images/GNUmakefile: Corrected.
	
2004-02-29  Fred Kiefer <FredKiefer@gmx.de>

	* Header/AppKit/NSApplication.h:
	Defined values for the constants NSRunStoppedResponse,
	NSRunAbortedResponse, NSRunContinuesResponse.
	* Source/NSOpenPanel.m: (-ok:)
	* Source/NSSavePanel.m: (-cancel:, -ok:) Use stopModalWithCode:
	with the approriate button code.
	* Source/NSSavePanel.m: (-runModalForDirectory:file:,
	-runModalForDirectory:file:relativeToWindow:) Removed the check
	for the pressed button and return the value of the model loop
	directly.
	* Source/NSBox.m: (-drawRect:) Blank out the title rectangle
	here and not delegate this to the title cell via the background
	colour. (-initWithFrame:) Use an NSCell instead of an
	NSTextFieldCell for the title, as setBackgroundColour: is no
	longer needed.

2004-02-28  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Don't add CPPFLAGS to ADDITIONAL_INCLUDES, add
	ungif and X11 flags to GRAPHIC_... flags.

2004-02-26  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSApplication.m: (-beginSheet:...contextInfo:)
	Corrected signature of didEnd function.
	* Source/NSMenu.m: (-update)
	Tried to handle case for autoenabling correctly where a popup
	button doesn't have an action.
	* Source/NSBezierPath.m: (-contributionToContains:)
	* Source/NSStringDrawing.m: (cache_match())
	Replaced random() with rand() to increase portability.	
